Mon Oct 22 08:49:05 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.6: Release tar file made.

Mon Sep 10 12:41:34 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* All .po files: Updated to GPL 3.

2007-01-08  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.16.1.
	* Makevar.template: New file, copied in from gettext-0.16.1.

Tue Jul 26 21:46:16 2005  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.5: Release tar file made.

Mon Aug  2 12:18:15 2004   Arnold D. Robbins    <arnold@skeeve.com>

	* Release 3.1.4: Release tar file made.

2004-02-19  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.14.1.
	* Rules-quot: Upgrade to gettext-0.14.1.

2004-01-16  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.13.1.

Mon Jul  7 11:01:43 2003  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.3: Release tar file made.

2003-06-16  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.12.1.
	* Rules-quot: New file, from gettext-0.12.1.
	* boldquot.sed: New file, from gettext-0.12.1.
	* en@boldquot.header: New file, from gettext-0.12.1.
	* en@quot.header: New file, from gettext-0.12.1.
	* insert-header.sin: New file, from gettext-0.12.1.
	* quot.sed: New file, from gettext-0.12.1.

Wed Mar 19 14:10:31 2003  Arnold D. Robbins  <arnold@skeeve.com>

	This time for sure.
		-- Bullwinkle

	* Release 3.1.2: Release tar file made.

Mon Dec  2 11:49:59 2002  Arnold D. Robbins  <arnold@skeeve.com>

	* Rules-quot, en@quot.reader, en@boldquot.reader: removed.

Thu Sep 19 11:00:00 2002  Arnold D. Robbins  <arnold@skeeve.com>

	* Updated to gettext 0.11.5.

Mon Jun 17 18:26:23 2002  Arnold D. Robbins  <arnold@skeeve.com>

	* POTFILES.in: Updated with list of new regex files.

Wed May  1 16:41:32 2002  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.1: Release tar file made.

2002-04-09  gettextize  <bug-gnu-gettext@gnu.org>
