@@ -1,3 +1,10 @@
+Wed Dec 31 18:46:31 UTC 2008 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+        Sync with savannah gawk cvsps 223 and 222 (po).
+
+	* Makefile.in.in (install-dvi, install-ps): New targets that
+	do nothing.
+
 Wed Dec 31 17:23:53 UTC 2008 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
 	Sync with savannah gawk cvsps 220.
