@@ -1,3 +1,12 @@
+Wed Dec 31 18:46:31 UTC 2008 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 223. New test cases.
+
+	* ChangeLog, Makefile.am, lc_num1.awk, lc_num1.ok:
+	Test that the quote modifier in printf is not sticky.
+	* Gentests: Allow _ in test names.
+	* Makefile.in: Ignoring patches of generated files.
+
 Wed Dec 31 17:23:53 UTC 2008 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
 	Sync with savannah gawk cvsps 220.
